--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ function update() {
      enemyMove(boars);
 
     
-    bmpText = game.add.bitmapText(game.camera.width / 2, game.camera.height / 2, 'font', 'You won! \n Score: ' + totalScore + '\n Click to restart', 64);
+    bmpText = game.add.bitmapText(game.camera.width / 2 - 180, game.camera.height / 2 - 180, 'font', 'You won! \n Score: ' + totalScore + '\n Click to restart', 64);
     bmpText.fixedToCamera = true;
     bmpText.text = 'GAME OVER \n Score:' + totalScore + '\n Click to restart';
     bmpText.visible = false;
@@ -414,6 +414,7 @@ function update() {
          }, game.physics);
     }
 
+    
 
     game.physics.arcade.overlap(boars, bullets, hitEnemy, null, this);
     game.physics.arcade.overlap(platforms, bullets, hitObstacle, null, this);
@@ -487,9 +488,6 @@ function render() {
 
         player.damage(10);
         enemy.kill();
-        if(player.health == 0){
-            bmpText.visible = true;
-        }
 
     }
 
@@ -498,9 +496,6 @@ function render() {
 
         player.damage(30);
         enemy.kill();
-        if(player.health == 0){
-            bmpText.visible = true;
-        }
 
     }
 
